[project]
name = "cyclejournal-api"
version = "0.1.0"
description = "CycleJournal Backend API"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
cdk = [
    "aws-cdk-lib>=2.100.0",
    "constructs>=10.0.0",
]
lambda = [
    "boto3>=1.34.0",
    "aws-lambda-powertools>=2.30.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
